--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URL = mongodb+srv://tungtk2k1:tungtk2k1@cluster0.l16wphc.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = YOUR_MONGO_URL
 
-ACCESS_TOKEN_SECRET = 7HuMgztF6ILQWkbaRSrDXXIbAwQaek93vXNYkWAjRMQXAWT336
+ACCESS_TOKEN_SECRET = YOUR_ACCESS_TOKEN
 
-REFRESH_TOKEN_SECRET = 5dbJetYeb5rabrbaMnxY78JF9BbFbYsBkPDY4YjXdtTD3RuD9g
+REFRESH_TOKEN_SECRET =  YOUR_REFRESH_TOKEN
